# rincoin

./: .gitignore  CLAUDE.md  README.md  RELEASE_v1.0.2.md  SECURITY.md  configure.ac
.claude/: settings.local.json
build_msvc/: bitcoin_config.h
contrib/: build_release.sh  configure_db4.sh  install_db4.sh
depends/patches/qt/: fix-mingw-touchinput.patch
doc/: build-release.md
src/: Makefile.am  chainparams.cpp  validation.cpp
src/consensus/: tx_check.cpp
src/crypto/: rinhash.cpp
src/crypto/argon2/: Makefile.am  argon2_avx2.c  argon2_avx512.c  argon2_dispatch.c  argon2_dispatch.h  argon2_mempool.c  argon2_mempool.h  argon2_ssse3.c  core.c
src/crypto/argon2/blake2/: blamka-round-avx2.h  blamka-round-avx512.h  blamka-round-ssse3.h
src/libmw/src/file/: File.cpp
src/mweb/: mweb_miner.cpp
src/test/: net_tests.cpp  netbase_tests.cpp  validation_tests.cpp
src/tools/: Makefile.am  genesis_miner.cpp
test/util/data/: bitcoin-util-test.json  tt-delin1-out.json  tt-delout1-out.json  tt-locktime317000-out.json  txcreate1.json  txcreatedata1.json  txcreatedata2.json  txcreatedata_seq0.json  txcreatedata_seq1.json  txcreatemultisig1.json  txcreatemultisig3.json  txcreateoutpubkey2.json  txcreatescript3.json  txcreatesignv1.json
